fix RSS icon on Subscribe link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
   <div class="uk-footer-copyright">
     <div class="uk-container uk-container-center">
       <span class="uk-float-left">&copy; 2016 {{ site.title }}</span>
-      <a class="uk-float-right" href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="fa fa-rss"></i> Subscribe</a>
+      <a class="uk-float-right" href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="uk-icon-rss"></i> Subscribe</a>
     </div>
 
   </div>
